@@ -357,6 +357,9 @@ Bug Fixes
 * SOLR-6850: AutoAddReplicas makes a call to wait to see live replicas that times
   out after 30 milliseconds instead of 30 seconds. (Varun Thacker via Mark Miller)
 
+* SOLR-6397: zkcli script put/putfile should allow overwriting an existing znode's data
+  (Timothy Potter)
+
 Optimizations
 ----------------------
 
